--- a/future.html
+++ b/future.html
@@ -10,14 +10,14 @@
 	<link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<script async src="https://www.googletagmanager.com/gtag/js?id=295044932"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PMPD40C92W"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
 
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', '295044932');
-    </script>
+  	gtag('config', 'G-PMPD40C92W');
+	</script>
 
 	<!-- Quotes found on https://www.impelfeed.com/article/female-quotes-from-the-marvel-cinematic-universe-part-1 & https://marvel.fandom.com/wiki/Category:Female_Characters-->
 
