--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<script async src="https://www.googletagmanager.com/gtag/js?id=295044932"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PMPD40C92W"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
 
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', '295044932');
-    </script>
+  	gtag('config', 'G-PMPD40C92W');
+	</script>
     <title>Contact Form</title>
 
 	<!-- tutorials used from: https://www.w3schools.com/howto/default.asp -->
