--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=295044932"></script>
-
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PMPD40C92W"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', '295044932');
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'G-PMPD40C92W');
     </script>
 
     <!-- Imgaes obtained from  https://www.marvel.com/comics/discover/692/women-of-marvel 
