--- a/timeline.html
+++ b/timeline.html
@@ -9,14 +9,15 @@
 	<link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
 
-	<script async src="https://www.googletagmanager.com/gtag/js?id=295044932"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PMPD40C92W"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
 
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', '295044932');
-    </script>
+  	gtag('config', 'G-PMPD40C92W');
+	</script>
 
 	<!-- source for text: https://marvel.fandom.com/wiki/Category:Female_Characters -->
 
