--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PMPD40C92W"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-  
-      gtag('config', 'G-PMPD40C92W');
-    </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZWG36BC7F6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZWG36BC7F6');
+</script>
 
     <!-- Imgaes obtained from  https://www.marvel.com/comics/discover/692/women-of-marvel 
       https://www.marvel.com/comics/discover/692/women-of-marvel
