--- a/contact.html
+++ b/contact.html
@@ -7,16 +7,15 @@
     <link rel="shortcut icon" type="image/png" href="images/Women-of-the-MCU-25fzrrv-683x1024.jpeg"/>
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZWG36BC7F6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PMPD40C92W"></script>
-	<script>
-  	window.dataLayer = window.dataLayer || [];
-  	function gtag(){dataLayer.push(arguments);}
-  	gtag('js', new Date());
-
-  	gtag('config', 'G-PMPD40C92W');
-	</script>
-    <title>Contact Form</title>
+  gtag('config', 'G-ZWG36BC7F6');
+</script>
 
 	<!-- tutorials used from: https://www.w3schools.com/howto/default.asp -->
 </head>
