--- a/future.html
+++ b/future.html
@@ -10,15 +10,15 @@
 	<link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PMPD40C92W"></script>
-	<script>
-  	window.dataLayer = window.dataLayer || [];
-  	function gtag(){dataLayer.push(arguments);}
-  	gtag('js', new Date());
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZWG36BC7F6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  	gtag('config', 'G-PMPD40C92W');
-	</script>
-
+  gtag('config', 'G-ZWG36BC7F6');
+</script>
 	<!-- Quotes found on https://www.impelfeed.com/article/female-quotes-from-the-marvel-cinematic-universe-part-1 & https://marvel.fandom.com/wiki/Category:Female_Characters-->
 
 	<title>Future Women</title>
