--- a/timeline.html
+++ b/timeline.html
@@ -10,14 +10,15 @@
     <link rel="stylesheet" href="css/style.css">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PMPD40C92W"></script>
-	<script>
-  	window.dataLayer = window.dataLayer || [];
-  	function gtag(){dataLayer.push(arguments);}
-  	gtag('js', new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZWG36BC7F6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  	gtag('config', 'G-PMPD40C92W');
-	</script>
+  gtag('config', 'G-ZWG36BC7F6');
+</script>
+	
 
 	<!-- source for text: https://marvel.fandom.com/wiki/Category:Female_Characters -->
 
