--- a/women.html
+++ b/women.html
@@ -9,14 +9,15 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PMPD40C92W"></script>
-	<script>
-  	window.dataLayer = window.dataLayer || [];
-  	function gtag(){dataLayer.push(arguments);}
-  	gtag('js', new Date());
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZWG36BC7F6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  	gtag('config', 'G-PMPD40C92W');
-	</script>
+  gtag('config', 'G-ZWG36BC7F6');
+</script>
 
 	<title>Current Women</title>
 
