--- a/future.html
+++ b/future.html
@@ -63,35 +63,35 @@
 		<ul class="characters">
 		  <li id="angel" data-teams="original force">
 			<h2>She-Hulk</h2>
-			<img src="images/she-hulk.jpeg" alt="">
+			<img src="images/she-hulk.jpeg" alt="Cartoon She-Hulk with mean face and all green features">
 		  </li>
 		  <li id="beast" data-teams="hellfire">
 			<h2>Dani Moonstar</h2>
-			<img src="images/0_6acd_0.jpeg" alt="">
+			<img src="images/0_6acd_0.jpeg" alt="Dani Moonstar is her godess costume holding bow and arrow">
 		  </li>
 		  <li id="cyclops" data-teams="factor">
 			<h2>Rogue</h2>
-			<img src="images/Excalibur_Vol_4_1_Unknown_Comics_and_Comics_Elite_Exclusive_Virgin_Variant.jpeg" alt="">
+			<img src="images/Excalibur_Vol_4_1_Unknown_Comics_and_Comics_Elite_Exclusive_Virgin_Variant.jpeg" alt="Cartoon character Rogue figthing in outer space">
 		  </li>
 		  <li id="emma-frost" data-teams="original">
 			<h2>Nico Minoru</h2>
-			<img src="images/Screen Shot 2021-11-30 at 8.31.36 PM.png" alt="">
+			<img src="images/Screen Shot 2021-11-30 at 8.31.36 PM.png" alt="Cartoon Nico Minour with a short black hair bob and blowing gum bubbles">
 		  </li>
 		  <li id="iceman" data-teams="hellfire">
 			<h2>Warrior Woman</h2>
-			<img src="images/Squadron_Supreme_Vol_4_3_Kirk_Variant_Textless.jpeg" alt="">
+			<img src="images/Squadron_Supreme_Vol_4_3_Kirk_Variant_Textless.jpeg" alt="Cartoon Warrior Woman lunging forward in a pink outer space setting">
 		  </li>
 		  <li id="jean-grey" data-teams="factor">
 			<h2>Jean Grey</h2>
-			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/77020/ct-jean-grey.png" alt="">
+			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/77020/ct-jean-grey.png" alt="Red hair Jean Grey with yellow eyes">
 		  </li>
 		  <li id="magneto" data-teams="original">
 			<h2>Singularity</h2>
-			<img src="images/dalb04y-014a0afa-181f-4bcb-8e70-4d64b7e456c9.jpeg" alt="">
+			<img src="images/dalb04y-014a0afa-181f-4bcb-8e70-4d64b7e456c9.jpeg" alt="Cartoon Singularity in all purple and white eyes">
 		  </li>
 		  <li id="nightcrawler" data-teams="factor">
 			<h2>Psylocke</h2>
-			<img src="images/Did8sdkWkAANkud.jpeg" alt="">
+			<img src="images/Did8sdkWkAANkud.jpeg" alt="Psylocke Character with her blue custome and purple hair leaning downwards">
 		  </li>
 		  <li id="professor-x" data-teams="original">
 			<h2>Medusa</h2>
@@ -99,7 +99,7 @@
 		  </li>
 		  <li id="psylocke" data-teams="hellfire force">
 			<h2>Valkryie</h2>
-			<img src="images/val_featured.jpeg" alt="">
+			<img src="images/val_featured.jpeg" alt="Blonde Cartoon Character Valrkyie with her hammer">
 		  </li>
 		  <li id="quicksilver" data-teams="factor">
 			<h2>Kitty Pryde</h2>
@@ -107,23 +107,23 @@
 		  </li>
 		  <li id="rictor" data-teams="original">
 			<h2>Dazzler</h2>
-			<img src="images/250px-Dazzler_wiki.png" alt="">
+			<img src="images/Alison_Blaire.jpeg" alt="Blone cartoon Dazzler with a grey coustume and smiling">
 		  </li>
 		  <li id="storm" data-teams="force team">
 			<h2>Storm</h2>
-			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/77020/ct-storm.png" alt="">
+			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/77020/ct-storm.png" alt="Cartoon Character Storm with white hair mohawk and black body suit">
 		  </li>
 		  <li id="sunspot" data-teams="force hellfire">
 			<h2>Gamora</h2>
-			<img src="images/Gamora_Zen_Whoberi_Ben_Titan_(Earth-7528)_from_Guardians_of_the_Galaxy_Vol_6_13_cover_001.jpeg" alt="">
+			<img src="images/Gamora_Zen_Whoberi_Ben_Titan_(Earth-7528)_from_Guardians_of_the_Galaxy_Vol_6_13_cover_001.jpeg" alt="Green cartoon Gamora lunging with a sword">
 		  </li>
 		  <li id="tithe" data-teams="hellfire">
 			<h2>Misty Knight</h2>
-			<img src="images/Misty_Knight.jpeg" alt="">
+			<img src="images/Misty_Knight.jpeg" alt="Cartoon character Misty Knight in a red jump suit with an afro sitting in a chair in front of a bunch of computers">
 		  </li>
 		  <li id="wolverine" data-teams="original">
 			<h2>Captian Marvel</h2>
-			<img src="images/captain-marvel-2-kamala-khan.jpeg" alt="">
+			<img src="images/captain-marvel-2-kamala-khan.jpeg" alt="Old version cartoon Carol Danvers/Captain Marvel with red coustime and Ms. Marvel in the back">
 		  </li>
 		</ul>
 	  </div>
