--- a/index.html
+++ b/index.html
@@ -51,61 +51,61 @@
 
     <section class="grid">
       <figure>
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3794/1.jpg" alt="">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3794/1.jpg" alt="Ms. Marvel Cartoon Character">
         <figcaption>
           <div><div><h3>Ms Marvel</h3></div></div>
         </figcaption>
       </figure>
       <figure>
-        <img src="images/Uncanny_Inhumans_Vol_1_1_Cheung_Connecting_Variant_B_Textless.jpeg" alt="">
+        <img src="images/Uncanny_Inhumans_Vol_1_1_Cheung_Connecting_Variant_B_Textless.jpeg" alt=" Medusa Cartoon Character with red hair and purple custome ">
         <figcaption>
           <div><div><h3>Medusa</h3></div></div>
         </figcaption>
       </figure>
       <figure>
-        <img src="images/val_featured.jpeg" alt="">
+        <img src="images/val_featured.jpeg" alt="Blonde Cartoon Character Valrkyie with her hammer">
         <figcaption>
           <div><div><h3>Valkryie</h3></div></div>
         </figcaption>
       </figure>
       <figure>
-        <img src="images/Did8sdkWkAANkud.jpeg" alt="">
+        <img src="images/Did8sdkWkAANkud.jpeg" alt="Psylocke Character with her blue custome and purple hair leaning downwards">
         <figcaption>
           <div><div><h3>Psylocke</h3></div></div>
         </figcaption>
       </figure>
       <figure>
-        <img src="images/dalb04y-014a0afa-181f-4bcb-8e70-4d64b7e456c9.jpeg" alt="">
+        <img src="images/dalb04y-014a0afa-181f-4bcb-8e70-4d64b7e456c9.jpeg" alt="Cartoon Singularity in all purple and white eyes ">
         <figcaption>
           <div><div><h3>Singularity</h3></div></div>
         </figcaption>
       </figure>
       <figure>
-        <img src="images/250px-Dazzler_wiki.png" alt="">
+        <img src="images/Alison_Blaire.jpeg" alt="Blone cartoon Dazzler with a grey coustume and smiling">
         <figcaption>
           <div><div><h3>Dazzler</h3></div></div>
         </figcaption>
       </figure>
       <figure>
-        <img src="images/captain-marvel-2-kamala-khan.jpeg" alt="">
+        <img src="images/captain-marvel-2-kamala-khan.jpeg" alt="Old version cartoon Carol Danvers with red coustime and Ms. Marvel in the back ">
         <figcaption>
           <div><div><h3>Carol Danvers</h3></div></div>
         </figcaption>
       </figure>
       <figure>
-        <img src="images/0_6acd_0.jpeg" alt="">
+        <img src="images/0_6acd_0.jpeg" alt=" Dani Moonstar is her godess costume holding bow and arrow">
         <figcaption>
           <div><div><h3>Dani Moonstar</h3></div></div>
         </figcaption>
       </figure>
       <figure>
-        <img src="images/Gamora_Zen_Whoberi_Ben_Titan_(Earth-7528)_from_Guardians_of_the_Galaxy_Vol_6_13_cover_001.jpeg" alt="">
+        <img src="images/Gamora_Zen_Whoberi_Ben_Titan_(Earth-7528)_from_Guardians_of_the_Galaxy_Vol_6_13_cover_001.jpeg" alt=" Green cartoon Gamora lunging with a sword">
         <figcaption>
           <div><div><h3>Gamora</h3></div></div>
         </figcaption>
       </figure>
       <figure>
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3794/10.jpg" alt="">
+        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3794/10.jpg" alt="Black Widow with logo covering her eye">
         <figcaption>
           <div><div><h3>Black Widow</h3></div></div>
         </figcaption>
