--- a/future.html
+++ b/future.html
@@ -63,15 +63,15 @@
 		<ul class="characters">
 		  <li id="angel" data-teams="original force">
 			<h2>She-Hulk</h2>
-			<img src="images/she-hulk.jpeg" alt="Cartoon She-Hulk with mean face and all green features">
+			<img src="images/pjimage-43-1634584595252.jpeg" alt="Cartoon She-Hulk with mean face and all green features">
 		  </li>
 		  <li id="beast" data-teams="hellfire">
 			<h2>Dani Moonstar</h2>
-			<img src="images/0_6acd_0.jpeg" alt="Dani Moonstar is her godess costume holding bow and arrow">
+			<img src="images/958746-moonstar.jpeg" alt="Dani Moonstar is her godess costume holding bow and arrow">
 		  </li>
 		  <li id="cyclops" data-teams="factor">
 			<h2>Rogue</h2>
-			<img src="images/Excalibur_Vol_4_1_Unknown_Comics_and_Comics_Elite_Exclusive_Virgin_Variant.jpeg" alt="Cartoon character Rogue figthing in outer space">
+			<img src="images/bac87acb101456e99be7548e9120f0e8.jpeg" alt="Cartoon character Rogue figthing in outer space">
 		  </li>
 		  <li id="emma-frost" data-teams="original">
 			<h2>Nico Minoru</h2>
@@ -79,7 +79,7 @@
 		  </li>
 		  <li id="iceman" data-teams="hellfire">
 			<h2>Warrior Woman</h2>
-			<img src="images/Squadron_Supreme_Vol_4_3_Kirk_Variant_Textless.jpeg" alt="Cartoon Warrior Woman lunging forward in a pink outer space setting">
+			<img src="images/d6c9af1c9b06ea2d2ef10d7f87334b02.jpeg" alt="Cartoon Warrior Woman lunging forward in a pink outer space setting">
 		  </li>
 		  <li id="jean-grey" data-teams="factor">
 			<h2>Jean Grey</h2>
@@ -95,7 +95,7 @@
 		  </li>
 		  <li id="professor-x" data-teams="original">
 			<h2>Medusa</h2>
-			<img src="images/Uncanny_Inhumans_Vol_1_1_Cheung_Connecting_Variant_B_Textless.jpeg" alt="">
+			<img src="images/medusa-header.jpeg" alt="Medusa Cartoon Character with red hair and purple custome">
 		  </li>
 		  <li id="psylocke" data-teams="hellfire force">
 			<h2>Valkryie</h2>
@@ -109,9 +109,9 @@
 			<h2>Dazzler</h2>
 			<img src="images/Alison_Blaire.jpeg" alt="Blone cartoon Dazzler with a grey coustume and smiling">
 		  </li>
-		  <li id="storm" data-teams="force team">
+		  <li id="storm" data-teams="force factor">
 			<h2>Storm</h2>
-			<img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/77020/ct-storm.png" alt="Cartoon Character Storm with white hair mohawk and black body suit">
+			<img src="images/intro-1588011609.jpeg" alt="Cartoon Character Storm with white hair and black body suit">
 		  </li>
 		  <li id="sunspot" data-teams="force hellfire">
 			<h2>Gamora</h2>
@@ -119,11 +119,11 @@
 		  </li>
 		  <li id="tithe" data-teams="hellfire">
 			<h2>Misty Knight</h2>
-			<img src="images/Misty_Knight.jpeg" alt="Cartoon character Misty Knight in a red jump suit with an afro sitting in a chair in front of a bunch of computers">
+			<img src="images/mistyknight616.jpeg.crdownload" alt="Cartoon character Misty Knight in a red jump suit with an afro sitting in a chair in front of a bunch of computers">
 		  </li>
 		  <li id="wolverine" data-teams="original">
 			<h2>Captian Marvel</h2>
-			<img src="images/captain-marvel-2-kamala-khan.jpeg" alt="Old version cartoon Carol Danvers/Captain Marvel with red coustime and Ms. Marvel in the back">
+			<img src="images/merlin_151018680_8b11e0d6-d5d0-4dc2-9b72-b5a46205b550-jumbo.jpeg" alt="Old version cartoon Carol Danvers/Captain Marvel with red coustime and Ms. Marvel in the back">
 		  </li>
 		</ul>
 	  </div>
