--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
 	<main id="skip">
 
 
-	<div class="flip-card">
+	<div class="flip-card" tabindex="0">
 		<div class="flip-card-inner">
 		  <div class="flip-card-front">
 			<img src="images/Screen Shot 2021-11-19 at 4.20.53 PM.png" alt="Personal Family Photo" style="width:300px;height:300px;">
