--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <figure>
         <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3794/1.jpg" alt="Ms. Marvel Cartoon Character">
         <figcaption>
-          <div><div><h3>Ms Marvel</h3></div></div>
+          <div><div><h3>Kamala</h3></div></div>
         </figcaption>
       </figure>
       <figure>
