--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section class="grid">
       <figure>
-        <img src="images/Misty_Knight.jpeg" alt="Ms. Marvel Cartoon Character">
+        <img src="images/image-20170213-15803-1i7jott.jpeg" alt="Ms. Marvel Cartoon Character">
         <figcaption>
           <div><div><h3>Kamala</h3></div></div>
         </figcaption>
@@ -105,7 +105,7 @@
         </figcaption>
       </figure>
       <figure>
-        <img src="images/Alison_Blaire.jpeg" alt="Black Widow with logo covering her eye">
+        <img src="images/Black-Widow-Widows-Sting-Marvel-Comic.jpeg" alt="Black Widow with logo covering her eye">
         <figcaption>
           <div><div><h3>Black Widow</h3></div></div>
         </figcaption>
