--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
      var grid = document.querySelector('.grid'),
     imgs = document.images,
     len = imgs.length,
-    counter = 0;
+    counter = 100;
 
   [].forEach.call( imgs, function( img ) {
     img.addEventListener( 'load', incrementCounter, false );
@@ -154,11 +154,11 @@
   });
   });
 
-  // for (let image of images) {
-  // image.addEventListener("load", function() {
-  //   this.parentNode.style.opacity = '1';
-  // });
-  // }
+  for (let image of images) {
+  image.addEventListener("load", function() {
+    this.parentNode.style.opacity = '1';
+  });
+  }
     </script>
 
     <ul class="cards-index">
