--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
  
    var images = document.querySelectorAll('img');
  
-   [].forEach.call( images, function( img ) {
-   img.addEventListener("load", function() {
-     this.parentNode.style.opacity = '1';
-   });
-   });
+  //  [].forEach.call( images, function( img ) {
+  //  img.addEventListener("load", function() {
+  //    this.parentNode.style.opacity = '1';
+  //  });
+  //  });
  
-   for (let image of images) {
-   image.addEventListener("load", function() {
-     this.parentNode.style.opacity = '1';
-   });
-   }
+  //  for (let image of images) {
+  //  image.addEventListener("load", function() {
+  //    this.parentNode.style.opacity = '1';
+  //  });
+  //  }
      </script> 
 
     <ul class="cards-index">
