--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
   //  });
   //  });
  
-  //  for (let image of images) {
-  //  image.addEventListener("load", function() {
-  //    this.parentNode.style.opacity = '1';
-  //  });
-  //  }
+   for (let image of images) {
+   image.addEventListener("load", function() {
+     this.parentNode.style.opacity = '1';
+   });
+   }
      </script> 
 
     <ul class="cards-index">
