--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
      counter = 0;
  
    [].forEach.call( imgs, function( img ) {
-     img.addEventListener( 'load', incrementCounter, false );
+     img.addEventListener( 'click', incrementCounter, false );
    } );
  
    function incrementCounter() {
@@ -149,11 +149,11 @@
  
    var images = document.querySelectorAll('img');
  
-  //  [].forEach.call( images, function( img ) {
-  //  img.addEventListener("load", function() {
-  //    this.parentNode.style.opacity = '1';
-  //  });
-  //  });
+   [].forEach.call( images, function( img ) {
+   img.addEventListener("click", function() {
+     this.parentNode.style.opacity = '1';
+   });
+   });
  
    for (let image of images) {
    image.addEventListener("load", function() {
