--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
      counter = 0;
  
    [].forEach.call( imgs, function( img ) {
-     img.addEventListener( 'click', incrementCounter, false );
+     img.addEventListener( 'loadstart', incrementCounter, false );
    } );
  
    function incrementCounter() {
@@ -150,7 +150,7 @@
    var images = document.querySelectorAll('img');
  
    [].forEach.call( images, function( img ) {
-   img.addEventListener("click", function() {
+   img.addEventListener("loadstart", function() {
      this.parentNode.style.opacity = '1';
    });
    });
