--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
      counter = 0;
  
    [].forEach.call( imgs, function( img ) {
-     img.addEventListener( 'loadstart', incrementCounter, false );
+     img.addEventListener( 'scroll', incrementCounter, false );
    } );
  
    function incrementCounter() {
@@ -150,13 +150,13 @@
    var images = document.querySelectorAll('img');
  
    [].forEach.call( images, function( img ) {
-   img.addEventListener("loadstart", function() {
+   img.addEventListener("scroll", function() {
      this.parentNode.style.opacity = '1';
    });
    });
  
    for (let image of images) {
-   image.addEventListener("load", function() {
+   image.addEventListener("scroll", function() {
      this.parentNode.style.opacity = '1';
    });
    }
