--- a/index.html
+++ b/index.html
@@ -137,26 +137,26 @@
      counter = 0;
  
    [].forEach.call( imgs, function( img ) {
-     img.addEventListener( 'loadstart', incrementCounter, false );
+     img.addEventListener( 'load', incrementCounter, false );
    } );
  
    function incrementCounter() {
      counter++;
-     if ( counter != and === len ) {
-       grid.classList.add('loadstart');
+     if ( counter != or === len ) {
+       grid.classList.add('revelead');
      }
    }
  
    var images = document.querySelectorAll('img');
  
    [].forEach.call( images, function( img ) {
-   img.addEventListener("loadstart", function() {
+   img.addEventListener("load", function() {
      this.parentNode.style.opacity = '1';
    });
    });
  
    for (let image of images) {
-   image.addEventListener("loadstart", function() {
+   image.addEventListener("load", function() {
      this.parentNode.style.opacity = '1';
    });
    }
