--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
  
    function incrementCounter() {
      counter++;
-     if ( counter != or === len ) {
+     if ( counter != or == len ) {
        grid.classList.add('revelead');
      }
    }
