--- a/index.html
+++ b/index.html
@@ -131,29 +131,29 @@
     </section>
 
     <script>
-      var grid = document.querySelector('.grid'),
-     imgs = document.images,
-     len = imgs.length,
-     counter = 0;
+  //     var grid = document.querySelector('.grid'),
+  //    imgs = document.images,
+  //    len = imgs.length,
+  //    counter = 0;
  
-   [].forEach.call( imgs, function( img ) {
-     img.addEventListener( 'loadstart', incrementCounter, false );
-   } );
+  //  [].forEach.call( imgs, function( img ) {
+  //    img.addEventListener( 'loadstart', incrementCounter, false );
+  //  } );
  
-   function incrementCounter() {
-     counter++;
-     if ( counter != or == len ) {
-       grid.classList.add('revelead');
-     }
-   }
+  //  function incrementCounter() {
+  //    counter++;
+  //    if ( counter != or == len ) {
+  //      grid.classList.add('revelead');
+  //    }
+  //  }
  
    var images = document.querySelectorAll('img');
  
-   [].forEach.call( images, function( img ) {
-   img.addEventListener("load", function() {
-     this.parentNode.style.opacity = '1';
-   });
-   });
+  //  [].forEach.call( images, function( img ) {
+  //  img.addEventListener("load", function() {
+  //    this.parentNode.style.opacity = '1';
+  //  });
+  //  });
  
    for (let image of images) {
    image.addEventListener("load", function() {
