--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <script>
       var grid = document.querySelector('.grid'),
      imgs = document.images,
-     len = imgs.length,
+     len = imgs,
      counter = 0;
  
    [].forEach.call( imgs, function( img ) {
