--- a/index.html
+++ b/index.html
@@ -142,18 +142,18 @@
  
    function incrementCounter() {
      counter++;
-     if ( counter != or == len ) {
+     if ( counter === len ) {
        grid.classList.add('revelead');
      }
    }
  
    var images = document.querySelectorAll('img');
  
-  //  [].forEach.call( images, function( img ) {
-  //  img.addEventListener("load", function() {
-  //    this.parentNode.style.opacity = '1';
-  //  });
-  //  });
+   [].forEach.call( images, function( img ) {
+   img.addEventListener("load", function() {
+     this.parentNode.style.opacity = '1';
+   });
+   });
  
   for (let image of images) {
   image.addEventListener("load", function() {
