--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
      img.addEventListener( 'load', incrementCounter, false );
    } );
  
-   function incrementCounter() {
-     counter++;
-     if ( counter === len ) {
-       grid.classList.add('revelead');
-     }
-   }
+  //  function incrementCounter() {
+  //    counter++;
+  //    if ( counter === len ) {
+  //      grid.classList.add('revelead');
+  //    }
+  //  }
  
    var images = document.querySelectorAll('img');
  
