--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
      len = imgs,
      counter = 0;
  
-   [].forEach.call( imgs, function( img ) {
-     img.addEventListener( 'load', incrementCounter, false );
-   } );
+  //  [].forEach.call( imgs, function( img ) {
+  //    img.addEventListener( 'load', incrementCounter, false );
+  //  } );
  
   //  function incrementCounter() {
   //    counter++;
