--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 
 	<div class="container-2">
 		<h1>Contact Me!</h1>
-		<form action="https://formspree.io/f/xyylqrby"
+		<form action="https://formspree.io/f/xnqwqalw"
 		method="POST">
 		  <div class="row-3">
 			<div class="col-25">
