--- a/timeline.html
+++ b/timeline.html
@@ -53,7 +53,7 @@
 					<span>1950s</span>
 				</div>
 				<div class="content-4">
-					<h2>The Beginning.</h2>
+					<h2>The Beginning</h2>
 					<p>Atlas Comics (known as Marvel Comics today) were beginning to introduce new heriones such as Invisible Girl, aka Susan Storm of the Fansatisc Four. These women were the first of their kind and paved the way for future generations.</p>
 				</div>
 			</div>
