--- a/future.html
+++ b/future.html
@@ -233,7 +233,7 @@ function showSlides(n) {
 	</div>
 	<div class="column-2">
 	  <h2>Jane</h2>
-	  <p>Jane Foster will star in the upcoming Thor movie as the powerful Mighty Thor. Dr. Foster is one of the world's leading atrophysicists. </p>
+	  <p>Jane Foster will star in the upcoming Thor movie as the powerful Mighty Thor. Dr. Foster is one of the world's leading atrophysicists of her generation. </p>
 	</div>
   </div>
 
