--- a/future.html
+++ b/future.html
@@ -222,7 +222,7 @@ function showSlides(n) {
   </div>
   <div class="column-2">
     <h2>Shuri</h2>
-    <p>Shuri will star in the new Blank Panther movie leading Wakanda to glory again. Shuri is the princess of Wakanda and the leader of the Wakadan Design Group. </p>
+    <p>Shuri will star in the new Blank Panther movie leading Wakanda to glory again. Shuri is the princess of Wakanda and the leader of the Wakadan Design Group for Technology. </p>
   </div>
 </div>
 
@@ -233,7 +233,7 @@ function showSlides(n) {
 	</div>
 	<div class="column-2">
 	  <h2>Jane</h2>
-	  <p>Jane Foster will star in the upcoming Thor movie as the powerful Mighty Thor. Dr. Foster is one of the world's leading atrophysicists of her generation. </p>
+	  <p>Jane Foster will star in the upcoming Thor movie as the powerful Mighty Thor. Dr. Foster is one of the world's leading global atrophysicists. </p>
 	</div>
   </div>
 
